--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Content/Custom.css
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Content/Custom.css
@@ -1,7 +1,7 @@
-﻿ .MnemomicLabel {
-     margin: 10px;
+﻿ #Start {
+     margin: 10px 10px 0px 10px;
  }
 
- #Start {
-     margin: 10px 10px 0px 10px;
+ button.label {
+     border: none;
  }
