"Pause"- and "stop"-buttons implemented

--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Content/Custom.css
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Content/Custom.css
@@ -1,6 +1,14 @@
-﻿ #Start {
+﻿ /*#Start {
      margin: 10px 10px 0px 10px;
  }
+
+ #Pause {
+     margin: 10px 10px 0px 10px;
+ }
+
+ #Stop {
+     margin: 10px 10px 0px 10px;
+ }*/
 
  button.label {
      border: none;
